# ChessQt

./: CMakeLists.txt  README.md  enums.h  figuresimage.qrc  gametypesmenu.ui.autosave  gametypesmenuwindow.h.tmp  main.cpp  utils.h
figure/: bishop.h  figure.h  horse.h  king.h  nonefigure.h  pawn.h  queen.h  rook.h
figure/behavior/: actionbehavior.h  alldirectionsaction.h  allslidedirectionaction.h  diagonalaction.h  horseaction.h  noaction.h  pawnaction.h  straightaction.h
gamemode/: chesslogger.h  gamemode.h  pvspoffline.h
scene/: chessscene.h  figuregraphicitem.h  highlitegraphicitem.h
settings/: settingsjson.h
window/: cellgraphicitem.h  chessscene.h  figuregraphicitem.h  gamemodesmenuwindow.cpp  gamemodesmenuwindow.h  gamemodesmenuwindow.ui  gamewindow.cpp  gamewindow.h  gamewindow.ui  highlitegraphicitem.h  menuwindow.cpp  menuwindow.h  menuwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  windialog.h  windowholder.h
